# AgML-CY-Bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml  test.yml
cybench/: config.py
cybench/datasets/: alignment.py  configured.py  dataset.py  dataset_overview.py
cybench/evaluation/: eval.py
cybench/models/: naive_models.py  nn_models.py  sklearn_models.py  trend_models.py
cybench/runs/: process_results.py  run_benchmark.py
cybench/util/: features.py
cybench/util/feat_eng/: 01-feats_2p.R  02-feats_5p.R  03-analyses.R  feat_eng_2p_f.R  feat_eng_5p_f.R  load_files_f.R
data_preparation/: DATA-SOURCES-SELECTION.md  filter_predictor_data.py  filter_yield_data.py  predictor_data_prep.py  round_csv.py  visualize_yield.py
data_preparation/global_AgERA5/: README.md
doc/: conf.py  index.rst  path_adjust_filter.py
notebooks/: cybench_summary.ipynb  run_cybench.ipynb
results_baselines/tables/: tables_march2024_v1_8.md
tests/datasets/: test_dataset.py
tests/models/: load_for_external_design.py  tests_external_design.py
