[tool.poetry]
name = "cybench"
version = "0.0.0"
description = "A dataset and benchmark for subnational crop yield forecasting, with coverage of major crop growing countries of the world for maize and wheat"
authors = ["AgML <agmlcybench@gmail.com>"]
license = "EUPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
flake8 = "^7.1.2"
tqdm = "^4.67.1"
pandas = "^2.2.3"
tsai = "^0.4.0"
datetime = "^5.5"
numpy = "^2.1.3"
sphinx = "^7.4.7"
pytest = "^8.3.5"
pyyaml = "^6.0.2"
comet-ml = "^3.49.5"
seaborn = "^0.13.2"
pymannkendall = "^1.4.3"
rasterio = "^1.4.3"
geopandas = "^1.0.1"
pandocfilters = "^1.5.1"
pytest-cov = "^6.0.0"
torch = "2.5.1"
urllib3 = "^2.3.0"
sphinx-rtd-theme = "^3.0.2"
pathlib = "^1.0.1"
fastcore = "1.7.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
